--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,5 @@
 @charset 'utf-8';
 
-
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
@@ -57,6 +56,9 @@
   My custom styles:
   Add your scss files below to structure your project styles
 */
+
+// Font-awesome
+@import "font-awesome/font-awesome";
 
 // Glboal
 @import "global/_accessibility";
