--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,7 +6,7 @@
 
 @include foundation-global-styles;
 //@include foundation-grid;
-//@include foundation-flex-grid;
+@include foundation-flex-grid;
 
 @include foundation-xy-grid-classes;
 @include foundation-typography;
@@ -52,10 +52,8 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-/*
-  My custom styles:
-  Add your scss files below to structure your project styles
-*/
+// My custom styles:
+@import "custom-styles";
 
 // Font-awesome
 @import "font-awesome/font-awesome";
