--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -72,7 +72,7 @@ $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #005187,
-  secondary: #767676,
+  secondary: #002E4D,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
@@ -84,7 +84,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: -apple-system, BlinkMacSystemFont, "Lato", sans-serif, "Domine", serif;
+$body-font-family: "Open Sans", sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -134,7 +134,7 @@ $block-grid-max: 8;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
-$font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
+$font-family-monospace: "Open Sans", sans-serif;
 $header-color: inherit;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
@@ -328,8 +328,8 @@ $callout-link-tint: 30%;
 
 $card-background: $white;
 $card-font-color: $body-font-color;
-$card-divider-background: $light-gray;
-$card-border: 1px solid $light-gray;
+$card-divider-background: $white;
+$card-border: none;
 $card-shadow: none;
 $card-border-radius: $global-radius;
 $card-padding: $global-padding;
@@ -398,7 +398,7 @@ $dropdownmenu-nested-margin: 0;
 $dropdownmenu-submenu-padding: $dropdownmenu-padding;
 $dropdownmenu-border: 1px solid $medium-gray;
 $dropdown-menu-item-color-active: $light-gray;
-$dropdown-menu-item-background-active: lighten($dark-nav-color, 5%);
+$dropdown-menu-item-background-active: lighten($primary-color, 5%);
 
 // 19. Flexbox Utilities
 // ---------------------
@@ -474,9 +474,9 @@ $menu-nested-margin: $global-menu-nested-margin;
 $menu-items-padding: $global-menu-padding;
 $menu-simple-margin: 1rem;
 $menu-item-color-active: $white;
-$menu-item-background-active: get-color(primary);
+$menu-item-background-active: $primary-color;
 $menu-icon-spacing: 0.25rem;
-$menu-item-background-hover: $light-gray;
+$menu-item-background-hover: $white;
 $menu-state-back-compat: true;
 $menu-centered-back-compat: true;
 
@@ -493,20 +493,20 @@ $meter-fill-bad: $alert-color;
 // 25. Off-canvas
 // --------------
 
-$offcanvas-size: 280px;
+$offcanvas-size: 300px;
 $offcanvas-vertical-size: 250px;
-$offcanvas-background: $dark-nav-color;
+$offcanvas-background: $primary-color;
 $offcanvas-shadow: 0 0 10px rgba($black, 0.7);
 $offcanvas-inner-shadow-size: 20px;
 $offcanvas-inner-shadow-color: rgba($black, 0.25);
-$offcanvas-overlay-zindex: 11;
+$offcanvas-overlay-zindex: 12;
 $offcanvas-push-zindex: 12;
-$offcanvas-overlap-zindex: 13;
+$offcanvas-overlap-zindex: 12;
 $offcanvas-reveal-zindex: 12;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
-$offcanvas-exit-background: rgba($white, 0.25);
+$offcanvas-exit-background: $secondary-color;
 $maincontent-class: 'off-canvas-content';
 
 // 26. Orbit
