--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,7 +5,7 @@
 @import 'motion-ui';
 
 @include foundation-global-styles;
-//@include foundation-grid;
+// @include foundation-grid;
 @include foundation-flex-grid;
 
 @include foundation-xy-grid-classes;
@@ -58,7 +58,7 @@
 // Font-awesome
 @import "font-awesome/font-awesome";
 
-// Global
+// Glboal
 @import "global/_accessibility";
 @import "global/colors";
 @import "global/wp-admin";
