--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -27,6 +27,7 @@ DARK GREEN
 MEDIUM GREEN
 LIGHT GREEN
 
+Les variables sont à définir dans le fichier _settings.scss
 
 */
 
@@ -78,13 +79,13 @@ a.scrollup:hover {
 body {
     background: #fdfdfd;
     color: #222222;
-    font-family: 'Open Sans', sans-serif;
+    font-family: $body-font-family;
     margin: 0px;
     padding: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $body-font-family;
 }
 
 h2.section-title {
@@ -207,7 +208,7 @@ ul#menu-main li {
 ul#menu-main li a:link, ul#menu-main li a:focus, ul#menu-main li a:visited {
     display: block;
     color: #fff;
-    padding: .5em 1em;
+    padding: 0.75em 1em;
     transition-duration: .2s;
     transition-property: all;
 }
@@ -238,7 +239,7 @@ ul#menu-main li ul li {
 ul#menu-main li ul li a:link, ul#menu-main li ul li a:focus, ul#menu-main li ul li a:visited {
     display: block;
     width: 200px;
-    padding: .5em 1em;
+    padding: 0.75em 1em;
 }
 
 /* FOOTER */
@@ -251,7 +252,7 @@ ul#menu-main li ul li a:link, ul#menu-main li ul li a:focus, ul#menu-main li ul 
 }
 
 #footer-top .cell {
-    padding: 5px;
+    padding: 1em;
 }
 
 #footer-top .has-tip {
@@ -362,32 +363,50 @@ ul.sous-navigation li a:hover {
     margin: 1em 0px 2em 0px;
 }
 
-#hero .search-wrapper {
+/* #hero .search-wrapper {
+    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
+    padding: .5em 0px;
+    margin-bottom: 2em;
+} */
+/* SEARCH DANS POPUP */
+
+.reveal-overlay {
+    background-color: #002e4d;
+}
+
+.reveal {
+    background: none;
+    border: none;
+    color: #fff;
+}
+
+#hero .search-wrapper, #modalSearch .search-wrapper {
     border-bottom: 1px solid #fff;
     border-top: 1px solid #fff;
     padding: .5em 0px;
     margin-bottom: 2em;
 }
 
-#hero table.search {
+#hero table.search, #modalSearch table {
     margin-bottom: 0px;
 }
 
-#hero table.search tbody{
+#hero table.search tbody, #modalSearch table.search tbody{
     background: none;
     border: none;
 }
 
-#hero table.search tbody tr td input#s {
+#hero table.search tbody tr td input#s, #modalSearch table.search tbody tr td input#s {
     margin-bottom: 0px;
     border: none;
     height: 40px;
 }
 
-#hero table.search tbody tr td input#searchsubmit {
+#hero table.search tbody tr td input#searchsubmit, #modalSearch table.search tbody tr td input#searchsubmit {
     color: #fff;
     border: none;
-    background: $primary-color;
+    background: #005187;
     width: 100%;
     height: 40px;
     font-weight: bold;
@@ -395,7 +414,7 @@ ul.sous-navigation li a:hover {
     font-size: .75em;
 }
 
-#hero table.search tbody tr td input#searchsubmit:hover {
+#hero table.search tbody tr td input#searchsubmit:hover, #modalSearch table.search tbody tr td input#searchsubmit:hover {
     opacity: .5;
 }
 
@@ -522,8 +541,7 @@ border-bottom: 1px solid #ddd;
 /* SECTION BULLETIN */
 
 #bulletin {
-    margin-bottom: 4em;
-    padding-top: 30px;
+    padding-top: 1em;
 }
 
 table.bulletin tbody{
@@ -560,8 +578,8 @@ table.bulletin tbody tr td input#inscription:hover {
 }
 
 #bulletin .wrapper .date {
-font-size: .8em;
-color: #999;
+    font-size: .8em;
+    color: #999;
 }
 
 #bulletin .wrapper:hover {
@@ -578,15 +596,26 @@ color: #999;
     font-size: 1.5em;
 }
 
-#bulletin .wrapper .text a.button {
-    color: $primary-color ;
+#bulletin .card a.button {
+    color: #005187;
     background: #fff;
-    border: 2px solid $primary-color;
+    border: 2px solid #005187;
     display: block;
     width: 50%;
     margin: 40px auto 0px auto;
     font-size: .75em;
     opacity: 1;
+}
+
+#bulletin .card a.button:hover {
+    color: #FFF ;
+    background: #005187;
+    opacity: .5;
+}
+
+#bulletin .card:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.20);
+    z-index: 100;
 }
 
 #bulletin .wrapper:hover .text a.button {
@@ -598,17 +627,32 @@ color: #999;
     opacity: .5;
 }
 
-#bulletin a.button, #faq a.button{
-    background: $primary-color ;
+#faq a.button{
+    background: $primary-color;
     width: 200px;
-    margin: 40px auto 0px auto;
+    margin: 0px auto 0px auto;
     font-size: .75em;
     opacity: 1;
 }
 
-#bulletin a.button:hover, #faq a.button:hover {
+#faq a.button:hover {
     opacity: .5;
-    background: $primary-color ;
+    background: $primary-color;
+}
+
+#load-more{
+    background: $primary-color;
+    width:200px;
+    margin: 0px auto 0px auto;
+    display:block;
+}
+
+#load-more:hover {
+    opacity: .5;
+}
+
+#load-more .done, #load-more:hover .done {
+    opacity: .2;
 }
 
 /*
@@ -860,14 +904,114 @@ p.note {
     ul#menu-main, ul#menu-main-de {
         display:none;
     }
-    /* On affiche le burger-button sur mobile */
+
     #burger-button {
-        display:block;
+        display: block;
     }
+
+    ul#menu-mobile li > a {
+        list-style: none;
+        background: $primary-color;
+        text-transform: uppercase;
+        font-weight: 400;
+        color: $white;
+        border-bottom: 1px solid $white;
+    }
+
+    ul#menu-mobile li.current-menu-item > a {
+        background-color: lighten($white, 100%);
+        color: $primary-color;
+    }
+
+    ul#menu-mobile li a:link, ul#menu-mobile li a:focus, ul#menu-mobile li a:visited {
+        display: block;
+        padding: 1em 1em;
+    }
+
+    ul#menu-mobile li a:hover {
+        color: $primary-color;
+        background: $white;
+    }
+
+    ul#menu-mobile li ul {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    ul#menu-mobile li ul li {
+        display: block;
+        text-transform: none;
+        font-weight: 300;
+    }
+
+    ul#menu-mobile li ul li a:link, ul#menu-mobile li ul li a:focus, ul#menu-mobile li ul li a:visited {
+        display: block;
+        width: 300px;
+        padding: 1em 3em;
+    }
+
+    #close-button {
+        display: none;
+        visibility: hidden;
+    }
+
+    #close-button.show {
+        display: block;
+        visibility: visible;
+        position: absolute;
+        right: 315px;
+        top: 50px;
+        font-size: 2.5em;
+        color: $white;
+        animation-name: show-close-button;
+        animation-duration: 2s;
+        animation-iteration-count: 1;
+        animation-direction: normal;
+    }
+
+    @keyframes show-close-button {
+        from {
+            visibility: visible;
+            opacity:0;
+        }
+        50% {
+            opacity:0;
+        }
+
+        to {
+            opacity:1;
+        }
+    }
+
+    #close-button:hover {
+        color: $light-gray;
+    }
+
+    #wpml-mobile {
+        color: $white;
+        width:195px;
+        margin: auto;
+        text-align: center;
+        padding: 0.75em;
+    }
+
+    #website-mobile a {
+        position: absolute;
+        color: $white;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 1.5em;
+    }
+
+    #website-mobile a:hover {
+        color: $medium-gray;
+    }
+
 }
 
 /* Medium and up */
 @media screen and (min-width: 40em) {
+    /* ACCROCHES */
     .accroches-wrapper .icon {
         opacity: .5;
     }
