--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -44,10 +44,10 @@
 
 .mobile-menu,
 .mobile-off-canvas-menu {
-
-  .menu .is-active > a {
-    background-color: lighten($dark-nav-color, 5%);
-  }
+  /*.menu .is-active > a {
+    background-color: lighten($white, 100%);
+    color: $primary-color;
+  }*/
 }
 
 // Tablet and desktop menu
