--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -177,8 +177,8 @@ a#logo {
     display: inline-block;
     color: #fff;
     margin-top: 6px;
-    border-left: 1px solid #fff;
     line-height: 1;
+    padding-left: 5px;
 }
 
 #website-link:hover {
@@ -827,7 +827,7 @@ section#sous-navigation a:hover {
 
 .doc-menurelated {
     max-height: 400px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 /*
