--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -76,6 +76,8 @@
 @import "components/featured-image";
 @import "components/dividers";
 @import "components/links";
+@import "components/slick";
+@import "components/slick-theme"; 
 
 // Templates
 @import "templates/front";
