--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -191,7 +191,7 @@ ul#version-tabs h3 {
 a.scrollup, a.scrollup:link,a.scrollup:focus, a.scrollup:visited  {
         bottom: 10px;
         right: 10px;
-        color: #E21F24;
+        color: #af0917;
         cursor: pointer;
         display: none;
         font-size: 2em;
@@ -204,7 +204,7 @@ a.scrollup, a.scrollup:link,a.scrollup:focus, a.scrollup:visited  {
         z-index: 999;
 }
 a.scrollup:hover {
-        color: #f0f0f0;
+        color: #E21F24;
 }
 
 /* BODY */
@@ -631,8 +631,9 @@ a.wrap-manuel h3 {
 }
 
 .accordion-content {
-/*   background: #f7f7f7; */
 border-bottom: 1px solid #ddd;
+border-left: 1px solid #ddd;
+border-right: 1px solid #ddd;
 }
 
 /*
