--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -44,7 +44,7 @@
 @include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
-// @include foundation-float-classes;
+@include foundation-float-classes;
 @include foundation-flex-classes;
 
 // @include foundation-prototype-classes;
@@ -54,6 +54,8 @@
 
 // My custom styles:
 @import "custom-styles";
+@import "custom-colors";
+
 
 // Font-awesome
 @import "font-awesome/font-awesome";
@@ -77,7 +79,7 @@
 @import "components/dividers";
 @import "components/links";
 @import "components/slick";
-@import "components/slick-theme"; 
+@import "components/slick-theme";
 
 // Templates
 @import "templates/front";
